--- a/config.env
+++ b/config.env
@@ -1,8 +1,8 @@
 PORT=9000
 NODE_ENV=development
-
+HERUKO_PASS =F@#3b$L!8Wq2nZ*GxYp9s!vA47hFmXtJ
 # database
 DB_USER=PateintApp
 DB_PASSOWRD=Basmlover3
-DB_NAME=ecommerce
+GOLBAL_URL=https://patients-app-api-herokuapp.onrender.com/
 DB_URL=mongodb://patientApp:Basmlover3@ac-mtljgg4-shard-00-00.ku2ciic.mongodb.net:27017,ac-mtljgg4-shard-00-01.ku2ciic.mongodb.net:27017,ac-mtljgg4-shard-00-02.ku2ciic.mongodb.net:27017/?ssl=true&replicaSet=atlas-57vtm3-shard-0&authSource=admin&retryWrites=true&w=majority
