--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
+    "express-api-cache": "^1.0.4",
     "express-async-handler": "^1.2.0",
     "express-validator": "^7.0.1",
     "mongoose": "^8.1.1",
