--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "apicache": "^1.6.3",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "express-api-cache": "^1.0.4",
