--- a/config.env
+++ b/config.env
@@ -5,4 +5,4 @@ HERUKO_PASS =F@#3b$L!8Wq2nZ*GxYp9s!vA47hFmXtJ
 DB_USER=PateintApp
 DB_PASSOWRD=Basmlover3
 GOLBAL_URL=https://patients-app-api-herokuapp.onrender.com/
-DB_URL=mongodb://patientApp:Basmlover3@ac-mtljgg4-shard-00-00.ku2ciic.mongodb.net:27017,ac-mtljgg4-shard-00-01.ku2ciic.mongodb.net:27017,ac-mtljgg4-shard-00-02.ku2ciic.mongodb.net:27017/?ssl=true&replicaSet=atlas-57vtm3-shard-0&authSource=admin&retryWrites=true&w=majority
+DB_URL=mongodb://tareqjdayah22:Wj#22wjaa@ac-c92vb8z-shard-00-00.4bdpilp.mongodb.net:27017,ac-c92vb8z-shard-00-01.4bdpilp.mongodb.net:27017,ac-c92vb8z-shard-00-02.4bdpilp.mongodb.net:27017/?ssl=true&replicaSet=atlas-gvhx3i-shard-0&authSource=admin&retryWrites=true&w=majority&appName=Cluster0
